<resources>
    <string name="app_name" translatable="false">SocialDown</string>
    <string name="text_delete">DELETE</string>
    <string name="text_shareFile">New post - Share file</string>
    <string name="text_thereWasAError">There was an error.</string>
    <string name="text_facebookDownloader" translatable="false">Facebook Downloader</string>
    <string name="text_instagramDownloader" translatable="false">Instagram Downloader</string>
    <string name="error_linkPrivate">Wrong link or video not found / is private.</string>
    <string name="error_getDataApi">Error loading data. Please try again.</string>
    <string name="text_downloading">Downloading…</string>
    <string name="text_progress">Progress</string>
    <string name="text_linkNoSupported">Link not supported.</string>
    <string name="option_open">Open</string>
    <string name="text_linkNotValid">Invalid link.</string>
    <string name="desc_tiktok">without watermark.</string>
    <string name="dialog_deleteItem">Do you want to remove this item?</string>
    <string name="text_itemDelete">Item deleted.</string>
    <string name="text_successfulDownload">"Download complete. "</string>
    <string name="text_selectToDownload">Select the items to download.</string>
    <string name="text_NoInternetConnection">No internet connection.</string>
    <string name="text_retryDownload">Retrying download…</string>
    <string name="option_share">New post - Share</string>
    <string name="option_delete">Delete</string>
    <string name="error_openFile">Error opening the file ./nIt does not exist on the device.</string>
    <string name="text_LoadData">Obtaining data…</string>
    <string name="text_DecPostSilder">Download your favorite posts.</string>
    <string name="text_StarDownload">Starting download.</string>
    <string name="text_PasteLink">Paste post link here…</string>
    <string name="text_Downloads">Downloads</string>
    <string name="text_Empty">Empty.</string>
    <string name="text_download">Download</string>
</resources>