<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:backgroundTint="@null"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_titleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/app_name"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tv_descDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/text_DecPostSilder"
        android:textColor="#6A727C"
        android:textSize="18sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_download_unlock"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/gradiant_button"
        android:fontFamily="@font/opensans_bold"
        android:shadowColor="#2c6ae6"
        android:text="@string/text_download"
        android:theme="@style/Theme.Material3.Dark.NoActionBar"
        android:textSize="18sp"
        android:visibility="gone"
        app:iconTint="@color/white"
        android:textColor="@color/white"
        app:backgroundTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_download_lock"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:theme="@style/Theme.MaterialComponents"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/gradiant_button_grey"
        android:fontFamily="@font/opensans_bold"
        android:text="Download"
        android:textSize="18sp"
        app:iconSize="25dp"
        app:iconPadding="2dp"
        app:iconGravity="textEnd"
        app:icon="@drawable/ic_ad"
        android:visibility="gone"
        app:backgroundTint="@null" />

</LinearLayout>